eval/runs/basic_pacha_on_spagila_with_openai/medium/117_hasura_contrib
=== INPUT ===
who are my top 5 renters for each of my stores

=== OUTPUT ===

=== QUERY PLAN ===
To provide the top 5 renters for each of the user's stores, we would need to retrieve data on the customers who have rented the most from each store. We would need to query the `patron` table to get information about customers and the `trans` table to get information about transactions (rentals).

Here is the Python script to retrieve the top 5 renters for each store:

```
# Query to retrieve the top 5 renters for each store
SELECT p.given_name AS first_name, p.surname AS last_name, COUNT(t.id) AS rental_count, t.store_id
FROM patron p
JOIN trans t ON p.id = t.customer_id
GROUP BY p.id, t.store_id
ORDER BY t.store_id, rental_count DESC
```

This query will return the first name, last name, rental count, and store ID for each customer, sorted by rental count in descending order for each store.
=== EXECUTION RESULT ===
  File "<string>", line 2
    SELECT p.given_name AS first_name, p.surname AS last_name, COUNT(t.id) AS rental_count, t.store_id
           ^
SyntaxError: invalid syntax
